Grace/tests/gibbs/errors/t307.grace
// ERROR = P1016
object {
    var name

print "Hello"
